tests/integration/errors/occurs/record/main.cx
fun bad(p) {
    { field: bad(p) }
}
